Fixed the spacing in Homepage

--- a/src/Homepage/HomepageComponents/Doctors/assessdoctors.css
+++ b/src/Homepage/HomepageComponents/Doctors/assessdoctors.css
@@ -1,6 +1,6 @@
 .DoctorsMainContainer{
     width: 76%;
-    margin-left: 295px;
+    margin-left: 350px;
     display:block;
     box-shadow: 0 0 10px #ffc4c6;
     margin-bottom: 20px;
